# ClickScript

./: .gitignore  CMakeLists.txt  README.md  config.txt  task.clk  task1.txt  void.txt
docs/: Manual.md
include/: Config.h  MyLogger.h  ThreadManager.h  clickscript.h  system.h
src/: Config.cpp  MyLogger.cpp  ThreadManager.cpp  clickscript.cpp  main.cpp  system.cpp
